--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div style="width: 800px; height: 600px;">
-  <html5-qrcode (scannedQrCode)="handleQrCode($event)"></html5-qrcode>
+  <html5-qrcode (decodedText)="decodedText = $event" (decodedResult)="qrCodeSuccess($event)"></html5-qrcode>
+  {{ decodedText }}
 </div>
